--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     implementation 'com.google.android.material:material:1.2.1'
+
+    implementation "com.maltaisn:icondialog:3.3.0"
+    implementation "com.maltaisn:iconpack-default:1.0.0"
+
+    implementation "com.github.duanhong169:colorpicker:1.1.6"
 }
