--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.routinetimer">
+    package="de.threateningcodecomments.routinetimer">
 
     <application
         android:allowBackup="true"
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
-        <activity android:name=".App"></activity>
-        <activity android:name=".SetRoutine" />
-        <activity android:name=".MainActivity">
+        <activity android:name="de.threateningcodecomments.routinetimer.TestForRoutines" />
+        <activity android:name="de.threateningcodecomments.routinetimer.SetRoutine" />
+        <activity android:name="de.threateningcodecomments.routinetimer.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
