--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
-        <activity android:name=".SelectRoutine"></activity>
+        <activity
+            android:name=".SelectRoutine"
+            android:label="@string/title_activity_select_routine"
+            android:theme="@style/AppTheme" />
         <activity android:name=".TestForRoutines" />
         <activity android:name=".DEPRECATED_SetRoutine" />
         <activity android:name=".MainActivity">
