--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 
 
 android {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     compileSdkVersion 29
 
     defaultConfig {
@@ -34,7 +38,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
     implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.google.firebase:firebase-database:19.5.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -68,7 +72,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    
+
     implementation "com.maltaisn:icondialog:3.3.0"
     implementation "com.maltaisn:iconpack-default:1.0.0"
     implementation "com.maltaisn:iconpack-community-material:5.3.45"
