--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tcc="http://schemas.android.com/apk/res-auto"
     package="de.threateningcodecomments.routinetimer">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
