--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
-        <service
-            android:name="de.threateningcodecomments.services_etc.CountingService"
+        <!--<service
+            android:name="de.threateningcodecomments.services_etc.TileEventService"
             android:enabled="true"
+            android:exported="true" />-->
+
+        <service
+            android:name="de.threateningcodecomments.services_etc.TileEventService"
+            android:enabled="true"
+            android:icon="@drawable/ic_logo"
+            android:roundIcon="@drawable/ic_logo"
+            android:foregroundServiceType="dataSync"
             android:exported="true" />
 
         <activity android:name=".MainActivity">
